<resources>
    <string name="app_name">Project Alme</string>
    <string name="dict_name">My Dictionaries</string>
    <string name="learn_words_name">Learn Words</string>
    <string name="gr_book_name">Grammar Book</string>
    <string name="gr_practice_name">Grammar Practice</string>
    <string name="word_transl_name">Word-Translation</string>
    <string name="transl_word_name">Translation-Word</string>
    <string name="audio_word_name">Auditon</string>
    <string name="speaking_name">Speaking</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="correct_toast">Correct!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="message_text">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>

    <string name="result_text">%1$d of %2$d words are correct!</string>
    <string name="try_again">Try again</string>
    <string name="another_test">Another test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_dictionary">My Dictionary</string>
    <string name="learn_words">Learn Words</string>
    <string name="reading">Reading</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="element_text">Text</string>

    <string name="question">%1$d of %2$d words are correct!</string>
</resources>
